--- a/bài chính thức/đh mo/css/styles.css
+++ b/bài chính thức/đh mo/css/styles.css
@@ -1,15 +1,7 @@
-/* --------------------------------------------------------	*/
-/*	Twitter Bootstrap */
-/*	Responsive media queries */
-/*	freshdesignweb.com */
-/* --------------------------------------------------------	*/
 
 @import url("bootstrap.min.css");
 @import url("bootstrap-responsive.min.css");
 
-/* --------------------------------------------------------	*/
-/*	Base */
-/* --------------------------------------------------------	*/
 
 ::-moz-selection { background: #999; color: #fff; text-shadow: none; }
 ::selection { background: #999; color: #fff; text-shadow: none; }
@@ -80,15 +72,9 @@ hr {
   clear:both;
 }
 
-p {
-  margin:15px 0;
-}
 
-blockquote {        
-  color:#83adff;
-  margin:15px 0px;
-  border-left:5px solid #fda056; 
-}
+
+
 
 a {
   color: lightblue;
@@ -101,50 +87,14 @@ a:hover {
   background-color: 
 }
 
-img {
-  width:100%;
-}
-
-/* --------------------------------------------------------	*/
-/*	Main Classes */
-/* --------------------------------------------------------	*/
-
-
-}
-
 
 
 header {
-  position:relative;
+  
   display:block;
 }
 
-.t-container {
-  position:relative;
-}
 
-.texture {
-  position:absolute;
-  top:0px;
-  left:-210px;
-  width:751px;
-  height:596px;
-}
-
-.logo {
-  position:relative;
-  margin-top:7px;
-}
-
-.head-info {
-  font-size:16px;
-  line-height:22px;
-}
-
-  
-/* --------------------------------------------------------	*/
-/*	Navigation */
-/* --------------------------------------------------------	*/
 
 		#nav
 		{
@@ -311,14 +261,15 @@ button:hover {
   border-radius: 20px;
   font-size: 20px;
   background-color: rgb(214, 214, 214);
-   transition: background-color,color  1s;
-     -webkit-transition:background-color, color 1s;
+   transition: background-color, border  2s !important;
+     -webkit-transition:background-color ,border 2s !important;
  
 }
 .chuyennganh:hover {
     color: white;
     background-color: lightblue;
     border: rgb(183, 110, 221) solid 2px;
+
 
 }
 
@@ -451,3 +402,39 @@ a {
 #row333 {
   background-color: rgb(238, 238, 238);
 }
+#chuongtrinh {
+  }
+#khacbiet1 {
+  background-color: rgb(186, 214, 219);
+  border-radius: 15px;
+}
+.khacbiet2 {
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-family: Times New Roman Serif;
+  color: rgb(78, 86, 28);
+
+}
+#khacbiet3 {
+  background-color: rgb(202, 209, 175);
+  border-radius: 15px;
+
+}
+.cam {
+  margin-left: 450px;
+  font-family: Times New Roman Serif;
+}
+ .follow {
+  margin-top: 10px; 
+  margin-bottom: 10px;
+  font-family: Times New Roman Serif;
+  font-size: 20px;
+   }
+   #footer {
+    background-color: rgb(51, 51, 51);
+    color: white;
+   }
+   #footer a {
+    color:#dddddd;
+   }
