--- a/bài chính thức/đh mo/css/styles.css
+++ b/bài chính thức/đh mo/css/styles.css
@@ -3,74 +3,12 @@
 @import url("bootstrap-responsive.min.css");
 
 
-::-moz-selection { background: #999; color: #fff; text-shadow: none; }
-::selection { background: #999; color: #fff; text-shadow: none; }
-:focus { outline-color: transparent!important; outline-style: none!important; }
 
-html {
-	overflow-y:scroll;
-	background:#fff;	
-}
 
-body {
-	margin: 0;
-	padding: 0;                      
-  font-family: 'Source Sans Pro', sans-serif;
-	font-size: 15px;
-	line-height: 20px;
-	color: #3b3b3b;
-	-webkit-font-smoothing: subpixel-antialiased;
-	-webkit-text-size-adjust: 100%;	
-	cursor:default;
-  background:#fff;
-}
 
-h1, h2, h3, h4, h5, h6 {
-  position:relative;
-  font-family: 'Titillium Web', sans-serif; 
-  font-weight: 200;
-  line-height: 1.25;
-  color: #3b3b3b;
-  margin:0px;
-  padding: 20px 0;
-  clear:both;
-}
 
-h1, h2 {
-  font-size:42px;
-  padding: 20px 0 10px 0;
-}
 
-h1 {
-  color:#3b3b3b;
-}
 
-h2 {
-}
-
-h3 {
-  font-size:24px;
-  line-height:30px;  
-}
-
-h4 {
-  font-size:20px;
-  line-height:24px;
-  font-weight:500;
-}
-
-h5, h6 {
-  font-size:20px;
-  line-height:26px;
-}    
-
-hr {
-  height:1px;
-  border:0px;
-  background:#4973c2;
-  margin:25px 0 25px 0;
-  clear:both;
-}
 
 
 
@@ -89,11 +27,6 @@ a:hover {
 
 
 
-header {
-  
-  display:block;
-}
-
 
 
 		#nav
@@ -103,10 +36,7 @@ header {
 			z-index: 1000;
 		}
 
-			#nav > a
-			{
-				display: none;
-			}
+			
 
 			#nav li
 			{
@@ -438,3 +368,63 @@ a {
    #footer a {
     color:#dddddd;
    }
+   #gioithieu {
+    background-color: white;
+    font-family: Times New Roman Serif;
+   }
+   .h22 {
+    font-size: 15px;
+   }
+   .col-4 {
+    margin-top: 50px;
+   }
+   #form232 {
+    margin: 30px;
+
+   }
+   #form4242 {
+    background-color: white;
+    font-family:  Times New Roman Serif;
+   }
+   #thongbao2 {
+    font-family:  Times New Roman Serif;
+    color: white;
+   }
+.ve2 {
+  font-size: 15px;
+  color: rgb(160, 155, 155)
+  ;
+}
+.donvi2 {
+  background-color: lightblue;
+  color: white;
+  font-family:  Times New Roman Serif;
+  font-size: 50px;
+
+}
+#donvi12 {
+  background-color: white;
+  font-family:  Times New Roman Serif;
+  margin-top: 50px;
+  font-size: 20px;
+  text-align: center;
+
+}
+#sinhvienn {
+  
+  font-family:  Times New Roman Serif;
+  background-color: lightblue;
+
+}
+#anh22 {
+    z-index: 1
+    background-image : url(..\đh mo\img\40.jpg);
+}
+.203 {
+  z-index: 5;
+
+}
+#lienketngoai {
+  text-align: center;
+  font-size: 50px;
+}
